<resources>
    <string name="app_name">古风</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="page_1">灯谜</string>
    <string name="page_2">一言</string>
    <string name="page_3">歇后语</string>
    <string name="page_4">···</string>
    <string name="fragment_a1">Fragment A1</string>
    <string name="fragment_a2">Fragment A2</string>
    <string name="fragment_a3">Fragment A3</string>
    <string name="fragment_b1">Fragment B1</string>
    <string name="fragment_b2">Fragment B2</string>
    <string name="fragment_b3">Fragment B3</string>
    <string name="fragment_c1">Fragment C1</string>
    <string name="fragment_common">Fragment common</string>
    <string name="next_fragment">Next Fragment</string>


    <string name="header_text">The Header</string>
    <string name="footer_text">The Footer</string>

    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已经到底了</string>

    <string name="shy_1">千锤万凿出深山</string>
    <string name="shy_2">烈火焚烧若等闲</string>
    <string name="shy_3">粉骨碎身浑不怕</string>
    <string name="shy_4">要留清白在人间</string>
    <string name="shy_5">石灰吟</string>
</resources>
